FestinaLenteApp/src/objects/AvailableDate__c.object
<CustomObject>
    <customHelpPage>Help</customHelpPage>
    <fields>
        <fullName>CalendarSortKey__c</fullName>
        <description>To define order of events on the Calendar</description>
        <formula>Class__r.Name + &apos;:&apos; + Name</formula>
        <label>Calendar Sort Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Available Dates</relationshipLabel>
        <relationshipName>AvailableDates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DayOfWeekNumber__c</fullName>
        <formula>MOD(Date__c - DATE(2000, 1, 2), 7)</formula>
        <label>Day of Week Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DayOfWeek__c</fullName>
        <formula>CASE(DayOfWeekNumber__c, 
    0, &apos;Sunday&apos;, 
    1, &apos;Monday&apos;, 
    2, &apos;Tuesday&apos;, 
    3, &apos;Wednesday&apos;, 
    4, &apos;Thursday&apos;, 
    5, &apos;Friday&apos;, 
    6, &apos;Saturday&apos;, 
    &apos;&apos;
)</formula>
        <label>Day of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpacesBooked__c</fullName>
        <label>Spaces Booked</label>
        <summaryForeignKey>BookedDate__c.AvailableDate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SpacesRemaining__c</fullName>
        <formula>IF(NOT(ISNULL(Class__r.SpacesAvailable__c)), Class__r.SpacesAvailable__c - SpacesBooked__c, null)</formula>
        <label>Spaces Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WeekNumber__c</fullName>
        <formula>FLOOR((Date__c - DATE(YEAR(Date__c + (MOD(8 - (MOD(Date__c - DATE(1900, 1, 7), 7) + 1), 7) - 3)), 1, 1) + MOD((MOD(DATE(YEAR(Date__c + (MOD(8 - (MOD(Date__c - DATE(1900, 1, 7), 7) + 1) ,7) - 3)), 1, 1) - DATE(1900, 1, 7), 7) + 1) + 1, 7) - 3) / 7 + 1)</formula>
        <label>Week Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Available Date</label>
    <nameField>
        <displayFormat>AD-{000000}</displayFormat>
        <label>Available Date Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AvailableDates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>